--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,7 +94,7 @@ h5 {
 }
 
 .bg_test {
-    background-image: url(cakes.jpg);
+    background-image: image-url("cakes.jpg");
     text-align:  center;
     padding:  100px;
     border: solid 2px;
